[package]
name = "krn-auth-rust"
version = "0.1.2"
authors = ["Helmut Januschka <helmut@januschka.com>"]
edition = "2018"
license = "MIT"
description = "KRN Auth"
homepage = "http://github.com/KroneMultimedia/krn-auth-rust"
repository = "http://github.com/KroneMultimedia/krn-auth-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "krn_auth"
path = "src/lib.rs"

[[bin]]
name = "krn_auth_demo"
path = "src/bin.rs"


[dependencies]
jsonwebtoken = "7"
base64 = "0.12"
openssl = "0.10"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }


serde = {version = "1.0", features = ["derive"] }
